# spark-agent-showcase

./: .gitignore  Claude.md  README.md  close_paper_position.py  config.py  main.py  pyproject.toml  start_sparky  stop_sparky  test_connection.py  test_fire.py
approval_ui/: api.py
approval_ui/web/: package-lock.json  package.json
approval_ui/web/app/: globals.css  layout.tsx  page.tsx
data_layer/: collector.py  events_calendar.py  freshness.py  iv_rank.py  notifier.py  provider.py  reconciler.py  schema.sql
eod_review/: accounts.json  candidates.json  health.json  positions.json
execution/: close_paper_position.py  dry_run.py  executor.py  order_state.py  router.py
llm_layer/: circuit_breaker.py  retrieval.py  trade_card.py  validator.py  web_search.py
llm_layer/prompts/: system.txt  trade_card.txt
strategy_engine/: candidate_lifecycle.py  candidates.py  exit_monitor.py  positions.py  rules_gate.py  scoring.py  watchlist_screener.py
tests/: conftest.py  test_api_delegate.py  test_api_nav.py  test_api_positions.py  test_candidate_generation.py  test_close_paper_position.py  test_closure_safety.py  test_group_reconstruction.py  test_history.py  test_live_executor.py  test_occ_parsing.py  test_paper_nav.py  test_pricing_validation.py  test_reconciler_chaos.py  test_rules_gate.py  test_shadow_mode.py  test_strangle_candidates.py  test_strangle_gate_enabled.py  test_strangle_scoring.py
